--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>OMD App</title>
     <meta name="description" content="Download the OMD App - a comprehensive chemistry tutorial script.">
     <link rel="stylesheet" href="styles.css">
+    <meta name="google-site-verification" content="4u4DB3GNfGxoLIg4kPYwTQOM849u31KMmOU1IzlQM8Y" />
 </head>
 <body>
     <header>
