--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>OMD App</h1>
+        <h1>OMD The learning pipeline</h1>
         <p>Your comprehensive chemistry tutorial script.</p>
     </header>
     <main>
