--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OMD App</title>
+    <title>OMD The learning pipeline</title>
     <meta name="description" content="Download the OMD App - a comprehensive chemistry tutorial script.">
     <link rel="stylesheet" href="styles.css">
     <meta name="google-site-verification" content="4u4DB3GNfGxoLIg4kPYwTQOM849u31KMmOU1IzlQM8Y" />
@@ -33,7 +33,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 OMD App</p>
+        <p>&copy; 2025 OMD The learning pipeline</p>
     </footer>
 </body>
 </html>
