--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OMD The learning pipeline</title>
-    <meta name="description" content="Download the OMD App - a comprehensive chemistry tutorial script.">
+    <title>OMD (The learning pipeline)</title>
+    <meta name="description" content="Download the OMD App - A platform for learning and knowledge sharing.">
     <link rel="stylesheet" href="styles.css">
     <meta name="google-site-verification" content="4u4DB3GNfGxoLIg4kPYwTQOM849u31KMmOU1IzlQM8Y" />
 </head>
 <body>
     <header>
-        <h1>OMD The learning pipeline</h1>
-        <p>Your comprehensive chemistry tutorial script.</p>
+        <h1>OMD (The learning pipeline)</h1>
+        <p>Your comprehensive learnining platform.</p>
     </header>
     <main>
         <section>
@@ -33,7 +33,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 OMD The learning pipeline</p>
+        <p>&copy; 2025 OMD (The learning pipeline)</p>
     </footer>
 </body>
 </html>
