--- a/index.html
+++ b/index.html
@@ -3,37 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OMD (The learning pipeline)</title>
-    <meta name="description" content="Download the OMD App - A platform for learning and knowledge sharing.">
+    <title>OMD - The Learning Pipeline | Free Learning Platform</title>
+    <meta name="description" content="Download the OMD App - Your ultimate free platform for learning, tutorials, and knowledge sharing.">
+    <meta name="google-site-verification" content="4u4DB3GNfGxoLIg4kPYwTQOM849u31KMmOU1IzlQM8Y">
+    <meta property="og:image" content="https://muhumuza7325.github.io/OMD/logo.png">
+    <meta property="og:title" content="OMD - The Learning Pipeline">
+    <meta property="og:description" content="Download OMD - A free platform for interactive learning and tutorials.">
+    <meta property="og:url" content="https://muhumuza7325.github.io/OMD/">
     <link rel="stylesheet" href="styles.css">
-    <meta name="google-site-verification" content="4u4DB3GNfGxoLIg4kPYwTQOM849u31KMmOU1IzlQM8Y" />
 </head>
 <body>
     <header>
-        <h1>OMD (The learning pipeline)</h1>
-        <p>Your comprehensive learnining platform.</p>
+        <h1>OMD (The Learning Pipeline)</h1>
+        <p>Your comprehensive learning platform.</p>
     </header>
+    
     <main>
-        <section>
+        <section class="features">
             <h2>Features</h2>
             <ul>
                 <li>Interactive tutorials</li>
-                <li>Easy to follow instructions</li>
+                <li>Easy-to-follow instructions</li>
                 <li>Free to download and use</li>
             </ul>
         </section>
-        <section>
+
+        <section class="download">
             <h2>Download</h2>
-            <p><a href="https://github.com/Muhumuza7325/Muhumuza7325/raw/main/chemistry_tutorial_wsl.sh" download>Download OMD App</a></p>
+            <a href="https://github.com/Muhumuza7325/Muhumuza7325/raw/main/chemistry_tutorial_wsl.sh" 
+               class="btn" download aria-label="Download OMD App (Shell Script)">Download OMD App</a>
         </section>
-        <section>
+
+        <section class="shortcut">
             <h2>Desktop Shortcut</h2>
             <p>Download the desktop shortcut with the app icon:</p>
-            <p><a href="https://raw.githubusercontent.com/Muhumuza7325/OMD/main/CHEM.lnk" download>Download Desktop Shortcut</a></p>
+            <a href="https://raw.githubusercontent.com/Muhumuza7325/OMD/main/CHEM.lnk" 
+               class="btn" download aria-label="Download OMD Desktop Shortcut (Windows LNK File)">Download Desktop Shortcut</a>
         </section>
     </main>
+
     <footer>
-        <p>&copy; 2025 OMD (The learning pipeline)</p>
+        <p>&copy; 2025 OMD (The Learning Pipeline)</p>
     </footer>
 </body>
 </html>
