--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>OMD - The Learning Pipeline | Free Learning Platform</title>
     <meta name="description" content="Download the OMD App - Your ultimate free platform for learning, tutorials, and knowledge sharing.">
     <meta name="google-site-verification" content="4u4DB3GNfGxoLIg4kPYwTQOM849u31KMmOU1IzlQM8Y">
-    <meta property="og:image" content="https://muhumuza7325.github.io/OMD/logo.png">
+    <meta property="og:image" content="https://muhumuza7325.github.io/OMD/logo.jpeg">
     <meta property="og:title" content="OMD - The Learning Pipeline">
     <meta property="og:description" content="Download OMD - A free platform for interactive learning and tutorials.">
     <meta property="og:url" content="https://muhumuza7325.github.io/OMD/">
