--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OMD - The Learning Pipeline | Free Learning Platform</title>
+    <title>The Learning Pipeline</title>
     <meta name="description" content="Download the OMD App - Your ultimate free platform for learning, tutorials, and knowledge sharing.">
     <meta name="google-site-verification" content="4u4DB3GNfGxoLIg4kPYwTQOM849u31KMmOU1IzlQM8Y">
     <meta property="og:image" content="https://muhumuza7325.github.io/OMD/logo.jpeg">
@@ -11,39 +11,102 @@
     <meta property="og:description" content="Download OMD - A free platform for interactive learning and tutorials.">
     <meta property="og:url" content="https://muhumuza7325.github.io/OMD/">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+        }
+        .header {
+            background-color: #ff6600;
+            padding: 20px;
+            color: white;
+            font-size: 24px;
+        }
+        .nav {
+            background-color: #333;
+            padding: 10px;
+        }
+        .nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+            font-size: 18px;
+        }
+        .main {
+            padding: 50px;
+        }
+        .download-btn {
+            background-color: #ff6600;
+            color: white;
+            padding: 15px 30px;
+            font-size: 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            display: inline-block;
+        }
+        .footer {
+            background-color: #222;
+            color: white;
+            padding: 20px;
+            margin-top: 50px;
+        }
+        .content {
+            display: flex;
+            justify-content: space-between;
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 20px;
+            text-align: left;
+        }
+        .features {
+            max-width: 45%;
+        }
+        .features ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        .features li {
+            padding: 5px 0;
+            font-size: 18px;
+        }
+        .support {
+            max-width: 45%;
+            text-align: right;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>OMD (The Learning Pipeline)</h1>
-        <p>Your comprehensive learning platform.</p>
-    </header>
-    
-    <main>
+    <div class="header">OMD, A non-profit organisation</div>
+    <div class="main">
+        <h1>The Best Free Learning Platform</h1>
+        <p>Simple, fast, and powerful</p>
+        <a href="#" class="download-btn">Download Now</a>
+    </div>
+    <div class="content">
         <section class="features">
             <h2>Features</h2>
             <ul>
+                <li>Simple, fast, and powerful</li>
                 <li>Interactive tutorials</li>
                 <li>Easy-to-follow instructions</li>
                 <li>Free to download and use</li>
+                <li>Completely Free - no spyware, no ads, and no user tracking</li>
             </ul>
         </section>
-
-        <section class="download">
-            <h2>Download</h2>
-            <a href="https://github.com/Muhumuza7325/Muhumuza7325/raw/main/chemistry_tutorial_wsl.sh" 
-               class="btn" download aria-label="Download OMD App (Shell Script)">Download OMD App</a>
+        <section class="support">
+            <h2>Support OMD</h2>
+            <p>Your support helps us continue providing high-quality learning resources for free.</p>
+            <p>Ways to support us:</p>
+            <ul>
+                <li>Share OMD with your friends and colleagues</li>
+                <li>Contribute tutorials and resources</li>
+                <li>Provide feedback to improve our platform</li>
+                <li>Consider making a donation to keep OMD running</li>
+            </ul>
         </section>
-
-        <section class="shortcut">
-            <h2>Desktop Shortcut</h2>
-            <p>Download the desktop shortcut with the app icon:</p>
-            <a href="https://raw.githubusercontent.com/Muhumuza7325/OMD/main/CHEM.lnk" 
-               class="btn" download aria-label="Download OMD Desktop Shortcut (Windows LNK File)">Download Desktop Shortcut</a>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2025 OMD (The Learning Pipeline)</p>
-    </footer>
+    </div>
+    <div class="footer">&copy; 2025 Your Trusted Learning Platform. All rights reserved.</div>
 </body>
 </html>
