--- a/index.html
+++ b/index.html
@@ -3,30 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Learning Pipeline</title>
-    <meta name="description" content="Download the OMD App - Your ultimate free platform for learning, tutorials, and knowledge sharing.">
+    <title>The Educational Pipeline</title>
+    <meta name="description" content="Download the Educational Pipeline - Your ultimate free platform for learning, tutorials, and knowledge sharing.">
     <meta name="google-site-verification" content="4u4DB3GNfGxoLIg4kPYwTQOM849u31KMmOU1IzlQM8Y">
     <meta property="og:image" content="https://muhumuza7325.github.io/OMD/logo.jpeg">
     <meta property="og:title" content="OMD - The Learning Pipeline">
-    <meta property="og:description" content="Download OMD - A free platform for interactive learning and tutorials.">
+    <meta property="og:description" content="Download the Educational Pipeline - A free platform for interactive learning and tutorials.">
     <meta property="og:url" content="https://muhumuza7325.github.io/OMD/">
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            padding: 0;
+            padding: 10px;
             text-align: center;
         }
         .header {
-            background-color: #ff6600;
-            padding: 20px;
+            background-color: green;
+            padding: 10px;
             color: white;
             font-size: 24px;
         }
         .nav {
             background-color: #333;
-            padding: 10px;
+            padding: 5px;
         }
         .nav a {
             color: white;
@@ -35,12 +35,12 @@
             font-size: 18px;
         }
         .main {
-            padding: 50px;
+            padding: 5px;
         }
         .download-btn {
             background-color: #ff6600;
             color: white;
-            padding: 15px 30px;
+            padding: 15px 50px;
             font-size: 20px;
             text-decoration: none;
             border-radius: 5px;
@@ -49,15 +49,15 @@
         .footer {
             background-color: #222;
             color: white;
-            padding: 20px;
-            margin-top: 50px;
+            padding: 10px;
+            margin-top: 10px;
         }
         .content {
             display: flex;
             justify-content: space-between;
             max-width: 900px;
             margin: 0 auto;
-            padding: 20px;
+            padding: 10px;
             text-align: left;
         }
         .features {
@@ -69,26 +69,30 @@
         }
         .features li {
             padding: 5px 0;
-            font-size: 18px;
         }
         .support {
             max-width: 45%;
-            text-align: right;
+        }
+        .support ul {
+            padding-left: 20px; /* Add padding for bullet alignment */
         }
     </style>
 </head>
 <body>
-    <div class="header">OMD, A non-profit organisation</div>
+    <div class="header">Equitable, Relevant, and Quality Education for All</div>
     <div class="main">
-        <h1>The Best Free Learning Platform</h1>
-        <p>Simple, fast, and powerful</p>
-        <a href="#" class="download-btn">Download Now</a>
+        <h1>Your comprehensive Learning Platform</h1>
+<img src="https://muhumuza7325.github.io/OMD/logo.jpeg" alt="OMD Logo" style="max-width: 10%; height: auto;">
+        <p>Your Education is our Future -------- Never despair</p>
+        <a href="https://github.com/Muhumuza7325/OMD/raw/main/chemistry_tutorial_wsl.sh" class="download-btn">Download (Windows 10 & 11)</a>
+<a href="https://github.com/Muhumuza7325/OMD/raw/main/chemistry_tutorial.sh" class="download-btn">Download (MacOS and Linux)</a>
+        <p>A simple, fast, secure and powerful computer application</p>
     </div>
+    <p>The educational pipeline is a non-profit and open-source initiative supported by volunteers</p>
     <div class="content">
         <section class="features">
             <h2>Features</h2>
             <ul>
-                <li>Simple, fast, and powerful</li>
                 <li>Interactive tutorials</li>
                 <li>Easy-to-follow instructions</li>
                 <li>Free to download and use</li>
@@ -96,14 +100,14 @@
             </ul>
         </section>
         <section class="support">
-            <h2>Support OMD</h2>
-            <p>Your support helps us continue providing high-quality learning resources for free.</p>
-            <p>Ways to support us:</p>
+            <h2>Support</h2>
+            <p>You can support us by:</p>
             <ul>
-                <li>Share OMD with your friends and colleagues</li>
-                <li>Contribute tutorials and resources</li>
-                <li>Provide feedback to improve our platform</li>
-                <li>Consider making a donation to keep OMD running</li>
+                <li>Contacting us through our email: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=2024omd256@gmail.com">2024omd256@gmail.com</a> or by phone: <a href="tel:+256763956608">+256763956608</a> (WhatsApp), <a href="tel:+256747130325">+256747130325</a></li>
+                <li>Sharing the pipeline with your friends and colleagues</li>
+                <li>Contributing tutorials and resources</li>
+                <li>Providing feedback to improve our platform</li>
+                <li>Making a donation</li>
             </ul>
         </section>
     </div>
