--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Download the Educational Pipeline - Your ultimate free platform for learning, tutorials, and knowledge sharing.">
     <meta name="google-site-verification" content="4u4DB3GNfGxoLIg4kPYwTQOM849u31KMmOU1IzlQM8Y">
     <meta property="og:image" content="https://muhumuza7325.github.io/OMD/logo.jpeg">
-    <meta property="og:title" content="OMD - The Learning Pipeline">
+    <meta property="og:title" content="OMD - The Educational Pipeline">
     <meta property="og:description" content="Download the Educational Pipeline - A free platform for interactive learning and tutorials.">
     <meta property="og:url" content="https://muhumuza7325.github.io/OMD/">
     <link rel="stylesheet" href="styles.css">
