--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
 <body>
     <div class="header">Equitable, Relevant, and Quality Education for All</div>
     <div class="main">
-        <h1>Your comprehensive Learning Platform</h1>
+        <h1>The Educational Pipeline: Your Comprehensive Learning Platform</h1>
 <img src="https://muhumuza7325.github.io/OMD/logo.jpeg" alt="OMD Logo" style="max-width: 10%; height: auto;">
         <p>Your Education is our Future -------- Never despair</p>
-        <a href="https://github.com/Muhumuza7325/OMD/raw/main/chemistry_tutorial_wsl.sh" class="download-btn">Download (Windows 10 & 11)</a>
-<a href="https://github.com/Muhumuza7325/OMD/raw/main/chemistry_tutorial.sh" class="download-btn">Download (MacOS and Linux)</a>
+        <a href="https://github.com/Muhumuza7325/OMD/raw/main/download_omd_files_wsl.sh" class="download-btn">Download (Windows 10 & 11)</a>
+<a href="https://github.com/Muhumuza7325/OMD/raw/main/download_omd_files.sh" class="download-btn">Download (MacOS and Linux)</a>
         <p>A simple, fast, secure and powerful computer application</p>
     </div>
-    <p>The educational pipeline is a non-profit and open-source initiative supported by volunteers</p>
+    <p>The educational pipeline is a non-profit and open-source initiative supported by volunteers. You can contact us through our email: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=2024omd256@gmail.com">2024omd256@gmail.com</a> or by phone: <a href="tel:+256763956608">+256763956608</a> (WhatsApp), <a href="tel:+256747130325">+256747130325</a></p>
     <div class="content">
         <section class="features">
             <h2>Features</h2>
@@ -103,11 +103,10 @@
             <h2>Support</h2>
             <p>You can support us by:</p>
             <ul>
-                <li>Contacting us through our email: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=2024omd256@gmail.com">2024omd256@gmail.com</a> or by phone: <a href="tel:+256763956608">+256763956608</a> (WhatsApp), <a href="tel:+256747130325">+256747130325</a></li>
                 <li>Sharing the pipeline with your friends and colleagues</li>
                 <li>Contributing tutorials and resources</li>
                 <li>Providing feedback to improve our platform</li>
-                <li>Making a donation</li>
+                <li>Making a donation. Kindly contact us via our contacts above to make a donation. Thank you</li>
             </ul>
         </section>
     </div>
