--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <a href="https://github.com/Muhumuza7325/OMD/raw/main/download_omd_files.rar" class="download-btn">Download (MacOS and Linux)</a>
         <p>A simple, fast, secure and powerful computer application</p>
     </div>
-    <p>The educational pipeline is a non-profit and open-source initiative supported by volunteers. You can contact us through our email: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=2024omd256@gmail.com">2024omd256@gmail.com</a> or by phone: <a href="tel:+256763956608">+256763956608</a> (WhatsApp), <a href="tel:+256747130325">+256747130325</a></p>
+    <p>The educational pipeline is a non-profit and open-source initiative supported by volunteers. You can contact us through our email: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=2024omd256@gmail.com" target="_blank">2024omd256@gmail.com</a> or by phone: <a href="tel:+256763956608" target="_blank">+256763956608</a> (WhatsApp), <a href="tel:+256747130325">+256747130325</a></p>
     <div class="content">
         <section class="features">
             <h2>Features</h2>
