--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         <p>A simple, fast, secure and powerful computer application</p>
     </div>
     <p>The educational pipeline is a non-profit and open-source initiative supported by volunteers. You can contact us through our email: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=2024omd256@gmail.com" target="_blank">2024omd256@gmail.com</a> or by phone: <a href="tel:+256763956608" target="_blank">+256763956608</a> (WhatsApp), <a href="tel:+256747130325">+256747130325</a></p>
+    <p>Detailed installation instructions can be found in the README file included within the downloaded ZIP archive. Please refer to that file for guidance on setting up the pipeline</p>
     <div class="content">
         <section class="features">
             <h2>Features</h2>
