--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <meta property="og:description" content="Download the Educational Pipeline - A free platform for learning and knowledge sharing.">
     <meta property="og:url" content="https://muhumuza7325.github.io/OMD/">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 10px;
             text-align: center;
@@ -45,6 +46,7 @@
             text-decoration: none;
             border-radius: 5px;
             display: inline-block;
+            margin: 5px;
         }
         .footer {
             background-color: #222;
@@ -60,21 +62,15 @@
             padding: 10px;
             text-align: left;
         }
-        .features {
+        .features, .support {
             max-width: 45%;
         }
-        .features ul {
+        .features ul, .support ul {
             list-style-type: none;
             padding: 0;
         }
-        .features li {
-            padding: 5px 0;
-        }
-        .support {
-            max-width: 45%;
-        }
         .support ul {
-            padding-left: 20px; /* Add padding for bullet alignment */
+            padding-left: 20px;
         }
     </style>
 </head>
@@ -82,10 +78,10 @@
     <div class="header">Equitable, Relevant, and Quality Education for All</div>
     <div class="main">
         <h1>The Educational Pipeline: Your Comprehensive Learning Platform</h1>
-<img src="https://muhumuza7325.github.io/OMD/logo.jpeg" alt="OMD Logo" style="max-width: 10%; height: auto;">
+        <img src="https://muhumuza7325.github.io/OMD/logo.jpeg" alt="OMD Logo" style="max-width: 10%; height: auto;">
         <p>Your Education is our Future -------- Never despair</p>
         <a href="https://github.com/Muhumuza7325/OMD/raw/main/download_omd_files_wsl.rar" class="download-btn">Download (Windows 10 & 11)</a>
-<a href="https://github.com/Muhumuza7325/OMD/raw/main/download_omd_files.zip" class="download-btn">Download (MacOS and Linux)</a>
+        <a href="https://github.com/Muhumuza7325/OMD/raw/main/download_omd_files.zip" class="download-btn">Download (MacOS and Linux)</a>
         <p>A simple, fast, secure and powerful computer application</p>
     </div>
     <p>The educational pipeline is a non-profit and open-source initiative supported by volunteers. You can contact us through our email: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=2024omd256@gmail.com" target="_blank">2024omd256@gmail.com</a> or by phone: <a href="tel:+256763956608" target="_blank">+256763956608</a> (WhatsApp), <a href="tel:+256747130325">+256747130325</a></p>
@@ -98,16 +94,15 @@
                 <li>Easy-to-follow instructions</li>
                 <li>Free to download and use</li>
                 <li>Completely Free - no spyware, no ads, and no user tracking</li>
+                <li>Works mostly offline after installation</li>
             </ul>
         </section>
         <section class="support">
             <h2>Support</h2>
-            <p>You can support us by:</p>
-            <ul>
-                <li>Sharing the pipeline with your friends and colleagues</li>
-                <li>Contributing tutorials and resources</li>
-                <li>Providing feedback to improve our platform</li>
-                <li>Making a donation. Kindly contact us via our contacts above to make a donation. Thank you</li>
+                <li>Share the pipeline with your friends and colleagues</li>
+                <li>Contribute tutorials and resources</li>
+                <li>Provide feedback to improve our platform</li>
+                <li>Make a donation. Kindly contact us via our contacts above to make a donation. Thank you</li>
             </ul>
         </section>
     </div>
