--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:url" content="https://muhumuza7325.github.io/OMD/">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="icon" href="https://muhumuza7325.github.io/OMD/logo.jpeg" type="image/jpeg">
     <style>
         body {
             font-family: 'Poppins', sans-serif;
