--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         <h1>The Educational Pipeline: Your Comprehensive Learning Platform</h1>
         <img src="https://muhumuza7325.github.io/OMD/logo.jpeg" alt="OMD Logo" style="max-width: 10%; height: auto;">
         <p>Your Education is our Future -------- Never despair</p>
+        <a href="https://raw.githubusercontent.com/Muhumuza7325/OMD/main/README.md" target="_blank" class="download-btn">View (Android Phone)</a>
         <a href="https://github.com/Muhumuza7325/OMD/raw/main/download_omd_files_wsl.rar" class="download-btn">Download (Windows 10 & 11)</a>
         <a href="https://github.com/Muhumuza7325/OMD/raw/main/download_omd_files.zip" class="download-btn">Download (MacOS and Linux)</a>
         <p>A simple, fast, secure and powerful computer application</p>
