--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Educational Pipeline</title>
-    <meta name="description" content="Download the Educational Pipeline - Your ultimate free platform for learning, tutorials, and knowledge sharing.">
+    <title>OMD | The Educational Pipeline</title>
+    <meta name="description" content="Download OMD (The Educational Pipeline) – A free, open-source platform offering high-quality tutorials, practical learning tools, and knowledge sharing across all disciplines. Access free quality educational content and learn effectively offline with OMD.">
+    <meta name="keywords" content="OMD, The Educational Pipeline, education platform, free learning, tutorials, knowledge sharing">
     <meta name="google-site-verification" content="4u4DB3GNfGxoLIg4kPYwTQOM849u31KMmOU1IzlQM8Y">
-    <meta property="og:image" content="https://muhumuza7325.github.io/OMD/logo.jpeg">
     <meta property="og:title" content="OMD - The Educational Pipeline">
-    <meta property="og:description" content="Download the Educational Pipeline - A free platform for learning and knowledge sharing.">
+    <meta property="og:description" content="Explore OMD – A completely free, open-source, powerful, and secure educational platform designed to make learning simple, fast, fun, and accessible to everyone. Download quality tutorials and learn effectively offline, anytime, anywhere. Grow your skills with OMD.">
+    <meta property="og:image" content="https://muhumuza7325.github.io/OMD/logo.jpeg">
     <meta property="og:url" content="https://muhumuza7325.github.io/OMD/">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -84,7 +85,7 @@
         <a href="https://raw.githubusercontent.com/Muhumuza7325/OMD/main/README.md" target="_blank" class="download-btn">View (Android Phone)</a>
         <a href="https://github.com/Muhumuza7325/OMD/raw/main/download_omd_files_wsl.rar" class="download-btn">Download (Windows 10 & 11)</a>
         <a href="https://github.com/Muhumuza7325/OMD/raw/main/download_omd_files.zip" class="download-btn">Download (MacOS and Linux)</a>
-        <p>A simple, fast, secure and powerful computer application</p>
+        <p>Simple, fast, secure and powerful</p>
     </div>
     <p>The educational pipeline is a non-profit and open-source initiative supported by volunteers. You can contact us through our email: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=2024omd256@gmail.com" target="_blank">2024omd256@gmail.com</a> or by phone: <a href="tel:+256763956608" target="_blank">+256763956608</a> (WhatsApp), <a href="tel:+256747130325">+256747130325</a></p>
     <p>Detailed installation instructions can be found in the README file included within the downloaded ZIP archive. Please refer to that file for guidance on setting up the pipeline</p>
