--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OMD | The Educational Pipeline</title>
     <meta name="description" content="Download OMD (The Educational Pipeline) – A free, open-source platform offering high-quality tutorials, practical learning tools, and knowledge sharing across all disciplines. Access free quality educational content and learn effectively offline with OMD.">
-    <meta name="keywords" content="OMD, The Educational Pipeline, education platform, free learning, tutorials, knowledge sharing">
+    <meta name="keywords" content="OMD, The Educational Pipeline, education platform, free learning, tutorials, knowledge sharing, offline education, open-source learning, all disciplines">
     <meta name="google-site-verification" content="4u4DB3GNfGxoLIg4kPYwTQOM849u31KMmOU1IzlQM8Y">
     <meta property="og:title" content="OMD - The Educational Pipeline">
     <meta property="og:description" content="Explore OMD – A completely free, open-source, powerful, and secure educational platform designed to make learning simple, fast, fun, and accessible to everyone. Download quality tutorials and learn effectively offline, anytime, anywhere. Grow your skills with OMD.">
@@ -92,7 +92,6 @@
     <div class="content">
         <section class="features">
             <h2>Features</h2>
-            <ul>
                 <li>Interactive tutorials</li>
                 <li>Easy-to-follow instructions</li>
                 <li>Free to download and use</li>
