--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
             border-radius: 5px;
             display: inline-block;
             margin: 5px;
+            transition: background-color 0.2s ease, transform 0.2s ease;
+        }
+        .download-btn:hover {
+            background-color: #e05500;
+            transform: scale(1.05);
+        }
+        .github-icon img {
+            transition: transform 0.2s ease, filter 0.2s ease;
+        }
+        .github-icon img:hover {
+            transform: scale(1.2);
+            filter: brightness(80%);
         }
         .footer {
             background-color: #222;
@@ -79,9 +91,14 @@
     <div class="header">Equitable, Relevant, and Quality Education for All</div>
     <div class="main">
         <h1>The Educational Pipeline: Your Comprehensive Learning Platform</h1>
-        <img src="https://muhumuza7325.github.io/OMD/logo.jpeg" alt="OMD Logo" style="max-width: 10%; height: auto;">
+        <div style="display: flex; align-items: center; justify-content: center;">
+            <img src="https://muhumuza7325.github.io/OMD/logo.jpeg" alt="OMD Logo" style="max-width: 10%; height: auto; margin-right: 15px;">
+            <a href="https://github.com/Muhumuza7325/OMD" target="_blank" title="GitHub Repository" class="github-icon">
+                <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo" style="width: 40px; height: 40px;">
+            </a>
+        </div>        
         <p>Your Education is our Future -------- Never despair</p>
-        <a href="https://raw.githubusercontent.com/Muhumuza7325/OMD/main/README.md" target="_blank" class="download-btn">View (Android Phone)</a>
+        <a href="https://github.com/Muhumuza7325/OMD/blob/main/README.md" target="_blank" class="download-btn">View (Android Phone)</a>
         <a href="https://github.com/Muhumuza7325/OMD/raw/main/download_omd_files_wsl.rar" class="download-btn">Download (Windows 10 & 11)</a>
         <a href="https://github.com/Muhumuza7325/OMD/raw/main/download_omd_files.zip" class="download-btn">Download (MacOS and Linux)</a>
         <p>Simple, fast, secure and powerful</p>
